kubernetes/addons/storage/minio/ingress/console-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://minio.default.internal.javiersant.com"
    gethomepage.dev/description: Minio
    gethomepage.dev/group: Management
    gethomepage.dev/icon: minio.svg
    gethomepage.dev/name: Minio
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 493
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: minio-console
          port: 9001
  tls:
    secretName: wildcard-javiersant-com-tls
